--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="7tTzTQyAX21WOltUGp1ZIdHki1gbIWMvTxngvnO47Ig" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hulu Customer Support USA – Call 844-314-8661</title>
@@ -203,3 +204,4 @@
   </div>
 </body>
 </html>
+
